corrected navigation-bar overflow

--- a/index.html
+++ b/index.html
@@ -59,33 +59,33 @@
                 <h3>New Release</h3>
                 <div class="carousel-slider">
                     <div class="carousel-list">
-                        <div class="carousel-item">
+                        <!-- <div class="carousel-item"> -->
                             <img src="images/avengers-1.jpg">
-                        </div>
-                        <div class="carousel-item">
+                        <!-- </div> -->
+                        <!-- <div class="carousel-item"> -->
                             <img src="images/doctor-strange.avif">
-                        </div>
-                        <div class="carousel-item">
+                        <!-- </div> -->
+                        <!-- <div class="carousel-item"> -->
                             <img src="images/guardians-of-galaxy.jpg">
-                        </div>
-                        <div class="carousel-item">
+                        <!-- </div> -->
+                        <!-- <div class="carousel-item"> -->
                             <img src="images/iron-man.webp">
-                        </div>
-                        <div class="carousel-item">
+                        <!-- </div> -->
+                        <!-- <div class="carousel-item"> -->
                             <img src="images/thor.jpg">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/grayman.jpg">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/holmes.webp">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/guilty.jpg">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/lucifer.jpg">
-                        </div>
+                        <!-- </div> -->
+                        <!-- <div class="carousel-item"> -->
+                            <!-- <img src="images/grayman.jpg"> -->
+                        <!-- </div> -->
+                        <!-- <div class="carousel-item"> -->
+                            <!-- <img src="images/holmes.webp"> -->
+                        <!-- </div> -->
+                        <!-- <div class="carousel-item"> -->
+                            <!-- <img src="images/guilty.jpg"> -->
+                        <!-- </div> -->
+                        <!-- <div class="carousel-item"> -->
+                            <!-- <img src="images/lucifer.jpg"> -->
+                        <!-- </div> -->
                     </div>
                 </div>
             </div>
